<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="androidx.navigation.fragment.NavHostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.detail.DetailFragment"
        app:defaultNavHost="true" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:title=""
            tools:title="John DOE" />

        <!-- Image de profil -->
        <ImageView
            android:id="@+id/tv_face"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="12dp"
            android:background="#CCCCCC"
            android:contentDescription="@string/candidate_face"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:src="@drawable/ic_avatar" />

        <!-- Call -->
        <ImageButton
            android:id="@+id/btn_call"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_call"
            android:background="@drawable/bg_circle"
            android:clickable="true"
            android:contentDescription="@string/appel"
            app:layout_constraintEnd_toStartOf="@id/btn_sms"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/tv_face"
            tools:src="@drawable/ic_call" />

        <TextView
            android:id="@+id/tv_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/btn_call"
            app:layout_constraintStart_toStartOf="@id/btn_call"
            app:layout_constraintTop_toBottomOf="@id/btn_call"
            android:text="@string/appel"
            tools:text="@string/appel" />

        <!-- SMS -->
        <ImageButton
            android:id="@+id/btn_sms"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/sms"
            android:src="@drawable/ic_sms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_face" />

        <TextView
            android:id="@+id/tv_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/btn_sms"
            app:layout_constraintStart_toStartOf="@id/btn_sms"
            app:layout_constraintTop_toBottomOf="@id/btn_sms"
            android:text="@string/sms"
            tools:text="@string/sms" />

        <!-- Email -->
        <ImageButton
            android:id="@+id/btn_email"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/email"
            android:scaleType="centerInside"
            android:src="@drawable/ic_mail"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/btn_sms"
            app:layout_constraintTop_toBottomOf="@id/tv_face" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/btn_email"
            app:layout_constraintStart_toStartOf="@id/btn_email"
            app:layout_constraintTop_toBottomOf="@id/btn_email"
            android:text="@string/email"
            tools:text="@string/email" />

        <!-- À PROPOS -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_rectangle"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sms">

            <TextView
                android:id="@+id/tv_about_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/group_about"
                tools:text="@string/about" />

            <TextView
                android:id="@+id/tv_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_about_label"
                tools:text="DD/MM/YYYY (DD ans)" />

            <TextView
                android:id="@+id/tv_birth_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#888888"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_birth"
                tools:text="Anniversaire" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- SALARY CLAIM -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_claim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_rectangle"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_about">

            <TextView
                android:id="@+id/tv_salary_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary_claim"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/group_claim"
                tools:text="@string/salary_claim" />

            <TextView
                android:id="@+id/tv_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_salary_label"
                tools:text="DDDD €" />

            <TextView
                android:id="@+id/tv_salary_gbp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#888888"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_salary"
                tools:text="soit £ DDDD,DD" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- NOTES -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_rectangle"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_claim">

            <!-- Notes -->
            <TextView
                android:id="@+id/tv_notes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/group_note"
                tools:text="@string/notes" />

            <TextView
                android:id="@+id/tv_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_notes_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Très bonne impression. Candidat réactif et pertinent." />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>